# pwcalculator-qt

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Jenkinsfile  LICENSE  README.md
android/: android-libbuild-android.so-deployment-settings.in.json  keystore.jks
android/package-src-dir/: AndroidManifest.xml
android/package-src-dir/res/values/: styles.xml
resources/: main.qml  qml.qrc
src/: MainObject.cpp  MainObject.hpp  main.cpp  password.cpp
